// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`d-flag.js [meriyah] format 1`] = `
"Unexpected regular expression flag (1:3)
> 1 | /./d;
    |   ^
  2 |"
`;

exports[`d-flag.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/./d;

=====================================output=====================================
/./d;

================================================================================
`;

exports[`multiple-flags.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/.*/ms;
/.*/my;

=====================================output=====================================
/.*/ms;
/.*/my;

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/[/]\\/\\u0aBc/mgi;

=====================================output=====================================
/[/]\\/\\u0aBc/gim;

================================================================================
`;

exports[`v-flag.js [acorn] format 1`] = `
"Invalid regular expression flag (1:2)
> 1 | /a/v;
    |  ^
  2 |"
`;

exports[`v-flag.js [espree] format 1`] = `
"Invalid regular expression flag (1:2)
> 1 | /a/v;
    |  ^
  2 |"
`;

exports[`v-flag.js [flow] format 1`] = `
"Invalid flags supplied to RegExp constructor 'v' (1:5)
> 1 | /a/v;
    |     ^
  2 |"
`;

exports[`v-flag.js [meriyah] format 1`] = `
"Unexpected regular expression flag (1:3)
> 1 | /a/v;
    |   ^
  2 |"
`;

exports[`v-flag.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/a/v;

=====================================output=====================================
/a/v;

================================================================================
`;
